--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>A way of living</title>
+    <link rel="stylesheet" href="my_styles.css">
   </head>
   <body>
-    <img src="images/cabbage.jpg" alt="My test image">
+    <article>
+        <header>小練習</header>
+
+    </article>
   </body>
 </html>
