add escape in title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <article>
-        <header>小練習</header>
+        <header>&mDDot;小練習</header>
         <section id="essay_1">
             <p>
                 這裏的日曆時鐘以及我，都沒有往前
